@@ -1,5 +1,12 @@
 2005-10-23  Vincent Pelletier  <subdino2004@yahoo.fr>
 
+	* include/grub/sparc64/libgcc.h: New file.
+	* conf/sparc64-ieee1275.rmk (COMMON_ASFLAGS): Remove -Av9.
+	(normal_mod_SOURCES): Use normal/sparc64/setjmp.S instead of
+	normal/sparc64/setjmp.c.
+
+2005-10-23  Vincent Pelletier  <subdino2004@yahoo.fr>
+
 	* kern/sparc64/dl.c: Rewritten for SPARCV9 ELF.
 	* kern/sparc64/cache.S: New file.
 	* kern/sparc64/cache.c: Removed.
